--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -48,7 +48,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!--Scripts del sitio-->
-    <script src="/assets/js/scriptsLC.js"></script>
+    <script src="./assets/js/scriptsLC.js"></script>
 </body>
 
 </html>
