--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,16 @@
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#F8671B">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52079675-18"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        //gtag('config', 'UA-52079675-18');
+    </script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
