--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,38 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#F8671B">
+    <!-- facebook -->
+    <meta name="facebook-domain-verification" content="a0jxaztaxergxa6o17j619qe1ejqxi" />
+
+        <!-- Metas -->
+        <meta name="description" content="Con Little Caesars® domina el Mundo Jurásico | Entra al sitio y encuentra
+            la mayor cantidad de dinosaurios resolviendo nuestra trivia." />
+        <meta name="subject"
+            content="Little Caesars® Pizza | Encuentra la mayor cantidad de dinosaurios resolviendo nuestra trivia">
+        <meta name="copyright" content="Little Caesars® Pizza">
+        <meta name="language" content="es">
+        <meta name="robots" content="index,follow" />
+        <meta name="canonical" content="">
+        <meta name="Classification" content="Promociones">
+        <meta name="author" content="MYMA | Marketing Y Medios Alternativos">
+        <meta name="directory" content="submission">
+        <meta name="coverage" content="Worldwide">
+        <meta name="distribution" content="Global">
+        <meta name="rating" content="General">
+        <meta name="revisit-after" content="7 days">
+        <meta http-equiv="Expires" content="0">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Cache-Control" content="no-cache">
+        <meta http-equiv="content-language” content=”es-mx">
+        
+        <!-- OpenGraph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://littlec.com.mx/Jurassicpark/home" />
+        <meta property="og:title" content="Con Little Caesars® domina el Mundo Jurásico" />
+        <meta property="og:description" content="Encuentra La mayor cantidad de dinosaurios resolviendo nuestra trivia" />
+        <meta property="og:image" content="https://littlec.com.mx/Jurassicpark/assets/images/open-graph-little-caesars.jpg" />
+        <!--   1200 x 630  -->
+        
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52079675-18"></script>
